--- a/src/features/post/PostPagingList.astro
+++ b/src/features/post/PostPagingList.astro
@@ -44,7 +44,7 @@ const {
         <PostCard
           pubDate={post.data.pubDate}
           updatedDate={post.data.updatedDate}
-          slug={post.slug}
+          id={post.id}
           title={post.data.title}
           category={post.data.category}
           tags={post.data.tags}
