update: ESLint系のアプデ + fix(#215)
- ESLint: 9.25.1 -> 9.35.0
- @eslint/js: 9.25.1 -> 9.35.0
- typescript-eslint: 8.31.0 -> 8.43.0

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const { noTopHeading = false, isMarkdownPage = false } = Astro.props;
 <header
   class="sticky top-0 z-10 from-brand-start to-brand-end bg-gradient-to-b py-3 lg:static"
 >
-  <div class="mx-auto px-4 color-white container">
+  <div class="container mx-auto px-4 color-white">
     <div class="flex items-baseline">
       <!-- モバイル端末でテキストが改行されることがあったので min-width を指定 -->
       <div class="min-w-[172px]">
