--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -21,7 +21,7 @@ const selectAnchorButtonTitle = isMarkdownPage
     <button
       id="select-nav-button"
       title="ナビゲーションリンク一覧を表示"
-      class="rounded-6 p-2 custom-after-border-b focus:bg-slate-2/50 hover:bg-slate-2/70"
+      class="custom-after-border-b rounded-6 p-2 focus:bg-slate-2/50 hover:bg-slate-2/70"
       ><span class="i-teenyicons:pin-outline block text-xl"></span></button
     >
     <button
