--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,7 +44,7 @@ const isShowGAdUnit = import.meta.env.PROD && isAdsense;
       <Header noTopHeading={noTopHeading} isMarkdownPage={isMarkdownPage} />
       <main class="min-h-[93.5vh]">
         <div class="my-8">
-          <div class="mx-auto flex px-2 container sm:px-4">
+          <div class="container mx-auto flex px-2 sm:px-4">
             <div class="hidden place-self-auto lg:block">
               <SideBar markdownHeadings={markdownHeadings} />
             </div>
