--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -111,7 +111,7 @@
   }
 
   .remark-code-title {
-    word-break: break-word;
+    overflow-wrap: anywhere;
     @apply font-hackGen text-xs px-2.5 py-0.5 bg-slate-600 inline-block text-white leading-5 rounded-t-1;
   }
 
