post archive: Buildableの記事はリンク切れが多く完全に情報が古いためアーカイブとした(#217)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -73,5 +73,21 @@ import '@/styles/markdown.scss';
         </p>
       </div>
     </div>
+    <div>
+      <h3>記事のアーカイブ</h3>
+      <div>
+        <p>
+          内容が古くなった記事も基本的には残していますが、リンク切れを多く起こしているなどの理由でアーカイブ扱いとして非公開にすることがあります。
+        </p>
+        <details>
+          <summary>アーカイブした記事</summary>
+          <ul>
+            <li>
+              ローコードでAPI作成～テスト～デプロイまでできる開発者プラットフォーム「Buildable」をさらっと紹介してみる
+            </li>
+          </ul>
+        </details>
+      </div>
+    </div>
   </div>
 </BaseLayout>
