feat: Aboutページに記事の最終更新日に関する注記を追記(#217)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,6 +74,15 @@ import '@/styles/markdown.scss';
       </div>
     </div>
     <div>
+      <h3>記事の最新更新日</h3>
+      <div>
+        <p>
+          単純に記事ファイルの最終更新日ではなく、手動で更新しています。<br />
+          これは、内容が変わらない範囲での細かな言い回しや句読点の調整だけでも最新更新日時が新しくなってしまうのは避けたい意図です。
+        </p>
+      </div>
+    </div>
+    <div>
       <h3>記事のアーカイブ</h3>
       <div>
         <p>
@@ -83,6 +92,7 @@ import '@/styles/markdown.scss';
           <summary>アーカイブした記事</summary>
           <ul>
             <li>
+              2021/05/31
               ローコードでAPI作成～テスト～デプロイまでできる開発者プラットフォーム「Buildable」をさらっと紹介してみる
             </li>
           </ul>
