--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,7 +30,7 @@ import '@/styles/markdown.scss';
       <p>
         Web Developer。<br />
         ここ数年はフロントエンドメインで活動しています。 <br
-        />経歴や経験技術、資格などは<a
+        />経験技術、資格などは<a
           href={ACCOUNT_LINKS.portfolio}
           class="underline underline-offset-2 decoration-solid"
           >ポートフォリオ</a
